welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:21: error: not found: value prendbiscuit
prendbiscuit;droite();droite();avance()
^