welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite()
droite()
if(!estSurBiscuit){
	avance();
}else{
	prendBiscuit();
}
avance()
avance() ;avance()
avance();prendBiscuit
gauche();gauche()
avance();avance();avance();avance();avance()
poseBiscuit()
droite();droite();avance();avance();avance();avance();avance();avance();prendBiscuit;gauche();gauche()
avance();avance();avance();avance();avance();poseBiscuit()
droite();droite();avance();avance();avance();avance();avance();avance();prendBiscuit;gauche();gauche()
avance();avance();avance();avance();avance();poseBiscuit
gauche();gauche()
avance();avance();avance();avance;avance();avance()
prendbiscuit;droite();droite();avance()

